k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airbnb
  labels:
    name: airbnb
    project: mazor-airbnb
